--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -12,8 +12,11 @@
         Layout = "~/Views/Shared/_LayoutUnlogged.cshtml";
     }
 }
-<h1>Auction Name: <h5>@Model.AuctionName</h5></h1>
-<h1>Auction Description: <h5>@Model.AuctionDescription</h5></h1>
+<div style="text-align:center">
+    <h1>@Model.AuctionName</h1>
+    <h3 style="margin-top:20px">@Model.AuctionDescription</h3>
+
+</div>
 
 
 
