--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -29,13 +29,13 @@
             <label for="startDate">Start Date</label>
             <div class="input-group">
                 <input type="datetime-local" class="form-control" id="startDate" name="startDate" required>
-                <div class="input-group-append">
+                @* <div class="input-group-append">
                     <div class="input-group-text">
                         <input type="checkbox" id="startNow" name="startNow">
                     </div>
-                </div>
+                </div> *@
             </div>
-            <small class="form-text text-muted">Check to start now.</small>
+            @* <small class="form-text text-muted">Check to start now.</small> *@
         </div>
         <div class="form-group">
             <label for="endDate">End Date</label>
