--- a/AuctionAce.Api/Views/Wishlist/Index.cshtml
+++ b/AuctionAce.Api/Views/Wishlist/Index.cshtml
@@ -4,32 +4,28 @@
     Layout = "~/Views/Shared/_LayoutLogged.cshtml";
 }
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th>Category</th>
-            <th>Jump to Auction</th>
-        </tr>
-    </thead>
-    <tbody>
+<div class="container">
+    <div class="row">
         @foreach (var auction in Model.AuctionDataDomain)
         {
-            <tr>
-                <td>@auction.Name</td>
-                <td>@auction.Description</td>
-                <td>@auction.StartDate</td>
-                <td>@auction.EndDate</td>
-                <td>@auction.Category</td>
-                <td>
-                    <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = auction.Id })" class="btn btn-primary">
-                        View Auction
-                    </a>
-                </td>
-            </tr>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title">@auction.Name</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">@auction.Description</p>
+                        <p><strong>Start Date:</strong> @auction.StartDate.ToString()</p>
+                        <p><strong>End Date:</strong> @auction.EndDate.ToString()</p>
+                        <p><strong>Category:</strong> @auction.Category</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = auction.Id })" class="btn btn-primary">
+                            View Auction
+                        </a>
+                    </div>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+    </div>
+</div>
