price usd,unauthorized access,refactoring middleware roles

--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -42,8 +42,8 @@
                         <tr>
                             <td>@i.Name</td>
                             <td>@i.Description</td>
-                            <td>@i.StartingPrice</td>
-                            <td>@i.BuyNowPrice</td>
+                            <td>@i.StartingPrice USD</td>
+                            <td>@i.BuyNowPrice USD</td>
                             <td>@(i.NewUsed == true ? "New" : "Used")</td>
                             <td>
                                 <button type="button" class="btn btn-info btn-sm w-100 h-100" data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
