--- a/AuctionAce.Api/Views/UserBoughtItems/Index.cshtml
+++ b/AuctionAce.Api/Views/UserBoughtItems/Index.cshtml
@@ -22,7 +22,7 @@
                     }
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@item.ItemName</h5>
-                        <p class="card-text">Price: @item.YourPrize</p>
+                        <p class="card-text">Price: @item.YourPrize USD</p>
                         <p class="card-text">Condition: @item.NewUsed</p>
                         <p class="card-text description-cell">@item.Description</p>
                     </div>
