--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -39,7 +39,7 @@
     <div class="col-md-2">
         <div class="col-md-12" style="margin-top:50%">
             <button class="btn-sm btn-primary buttons " id="quitButton">Quit</button>
-            <button class="btn-sm btn-primary buttons" id="buyNowButton">Buy Now : @Model.BuyNowPrice</button>
+            <button class="btn-sm btn-primary buttons" id="buyNowButton">Buy Now : @Model.BuyNowPrice USD</button>
             <span id="countdownTimer" class="h5 buttons">timer</span>
         </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="col-md-6">
 
         <div class="col-md-12">
-            <input type="text" style="height:105px;text-align:center" id="actualPrice" class="form-control" value="@Model.ActualHighestPrice" disabled />
+            <input type="text" style="height:105px;text-align:center" id="actualPrice" class="form-control" value="@Model.ActualHighestPrice USD" disabled />
         </div>
         <div class="col-md-12" style="text-align:center">
             <button id="actualPrice" class="btn btn-primary" style="margin-top:1rem;width:50%" disabled>Current Price</button>
@@ -81,15 +81,19 @@
             
         </div>
 
-        <!-- Sekcja z polem na nową ofertę i przyciskiem Bid -->
-        <div class="col-md-6">
-            <div class="col-md-12">
-                <input type="number" style="height:105px;text-align:center" id="newBid" class="form-control" placeholder="Enter your bid" />                
-            </div>            
-            <div class="col-md-12" style="text-align:center">
-                <button id="bidButton" class="btn btn-primary" style="margin-top:1rem;width:50%">Bid</button>
-            </div>
+    <!-- Sekcja z polem na nową ofertę i przyciskiem Bid -->
+    <div class="col-md-6">
+        <div class="col-md-12">
+            <input type="number" style="height:105px;text-align:center" id="newBid" class="form-control" placeholder="Enter your bid"
+            @(userId == Model.OwnerId ? "disabled" : "") />
         </div>
+        <div class="col-md-12" style="text-align:center">
+            <button id="bidButton" class="btn btn-primary" style="margin-top:1rem;width:50%"
+            @(userId == Model.OwnerId ? "disabled" : "")>
+                Bid
+            </button>
+        </div>
+    </div>
     </div>
 
 
@@ -157,7 +161,7 @@
 
                         Swal.fire({
                             title: "Auction ended",
-                            text: "Auction item sold! for : "+highestBid,
+                            text: "Auction item sold! for : "+highestBid +"USD",
                             icon: "warning",
                             confirmButtonColor: "#3085d6",
                             confirmButtonText: "Yes, quit!"
@@ -208,7 +212,7 @@
                 userCell.textContent = bid.userEmail;
 
                 var priceCell = document.createElement("td");
-                priceCell.textContent = bid.price;
+                priceCell.textContent = bid.price+" USD";
 
                 row.appendChild(indexCell);
                 row.appendChild(userCell);
@@ -241,7 +245,7 @@
             } else {
                 Swal.fire({
                     icon: 'error',
-                    title: `The offer must be greater than ${highestBid}`,
+                    title: `The offer must be greater than ${highestBid} USD`,
                 });
             }
         });
@@ -310,7 +314,7 @@
                 const newRow = tableBody.insertRow(0);
                 newRow.insertCell(0).textContent = 1;
                 newRow.insertCell(1).textContent = userEmail;
-                newRow.insertCell(2).textContent = bid;
+                newRow.insertCell(2).textContent = bid + " USD";
 
                 highestBid = bid;
 
@@ -323,7 +327,7 @@
                 // Show error message when offer is equal to or less than the highest bid
                 Swal.fire({
                     icon: 'error',
-                    title: `The offer must be greater than ${highestBid}`,
+                    title: `The offer must be greater than ${highestBid} USD`,
                 });
             }
         }
